update python example notebook

--- a/notebooks/Python Implementation.ipynb
+++ b/notebooks/Python Implementation.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimized Python Implementation(s)\n",
+    "# Optimized Python Implementation\n",
     "\n",
-    "In the previous workbooks, a simple implementation was provided in pure python. For a number of reasons, extension modules are provided by Numpy, SciPy, etc. for optimized matrix operations. The redblackgraph module also provides extension model implementations that are described below\n",
+    "In the previous workbooks, a simple implementation was provided in pure python. For performance optimized linear algebra operations, extension modules are provided by Numpy, SciPy, etc. The redblackgraph module also provides extension model implementations that are described below\n",
     "\n",
     "## rb.array / rb.matrix\n",
     "\n",
-    "The redblackgraph module provides two Numpy-like implementations, one of array (rbarray) and one of matrix (rbmatrix).\n",
+    "The redblackgraph module provides two Numpy-like implementations, one of array and one of matrix.\n",
     "\n",
-    "The distinctive characteristics of these classes are matrix multiplication has been overridden to support Red Black Graph linear algebra.\n",
+    "The distinctive characteristics of these classes are matrix multiplication has been overridden to support Red Black Graph linear algebra. As well as methods being defined for `transitive_closure` and `relational_composition`\n",
     "\n",
     "For example:"
    ]
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from redblackgraph import array, matrix, warshall\n",
+    "import redblackgraph as rb\n",
     "import numpy as np"
    ]
   },
@@ -33,11 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = array([[-1,  2,  3,  0,  0],\n",
-    "             [ 0, -1,  0,  2,  0],\n",
-    "             [ 0,  0,  1,  0,  0],\n",
-    "             [ 0,  0,  0, -1,  0],\n",
-    "             [ 2,  0,  0,  0,  1]], dtype=np.int64)"
+    "A = rb.array([[-1,  2,  3,  0,  0],\n",
+    "              [ 0, -1,  0,  2,  0],\n",
+    "              [ 0,  0,  1,  0,  0],\n",
+    "              [ 0,  0,  0, -1,  0],\n",
+    "              [ 2,  0,  0,  0,  1]], dtype=np.int64)"
    ]
   },
   {
@@ -71,12 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = array([[2, 0, 0, 0, 0]])\n",
-    "v = array([[0],\n",
-    "             [3],\n",
-    "             [0],\n",
-    "             [0],\n",
-    "             [0]])\n",
+    "u = rb.array([[2, 0, 0, 0, 0]])\n",
+    "v = rb.array([[0],\n",
+    "              [3],\n",
+    "              [0],\n",
+    "              [0],\n",
+    "              [0]])\n",
     "u_lambda = u @ A_star\n",
     "v_lambda = A_star @ v"
    ]
@@ -126,46 +126,98 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**note:** Rank 1 arrays can cause unexpected results. See: [Notes from Andrew Ng Lecture](https://www.coursera.org/learn/neural-networks-deep-learning/lecture/87MUx/a-note-on-python-numpy-vectors)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([[-1,  2,  3,  4,  0],\n",
-       "        [ 0, -1,  0,  2,  0],\n",
-       "        [ 0,  0,  1,  0,  0],\n",
-       "        [ 0,  0,  0, -1,  0],\n",
-       "        [ 2,  4,  5,  8,  1]]), array(3, dtype=int32))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.4 µs ± 277 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "warshall(array([[-1,  2,  3,  0,  0],\n",
-    "             [ 0, -1,  0,  2,  0],\n",
-    "             [ 0,  0,  1,  0,  0],\n",
-    "             [ 0,  0,  0, -1,  0],\n",
-    "             [ 2,  0,  0,  0,  1]], dtype=np.int64))"
+    "%%timeit\n",
+    "A = rb.array([[-1,  2,  3,  0,  0],\n",
+    "              [ 0, -1,  0,  2,  0],\n",
+    "              [ 0,  0,  1,  0,  0],\n",
+    "              [ 0,  0,  0, -1,  0],\n",
+    "              [ 2,  0,  0,  0,  1]], dtype=np.int64)\n",
+    "A_star, diameter = A.transitive_closure()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A_star:\n",
+      "[[-1  2  3  4  0]\n",
+      " [ 0 -1  0  2  0]\n",
+      " [ 0  0  1  0  0]\n",
+      " [ 0  0  0 -1  0]\n",
+      " [ 2  4  5  8  1]] \n",
+      "diameter: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"A_star:\\n{A_star} \\ndiameter: {diameter}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.2 µs ± 2.98 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "u = rb.array([[2, 0, 0, 0, 0, 1]])\n",
+    "v = rb.array([[0],\n",
+    "              [0],\n",
+    "              [0],\n",
+    "              [0],\n",
+    "              [0],\n",
+    "              [1]])\n",
+    "A_lambda = A_star.relational_composition(u, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A_lambda:\n",
+      "[[-1  2  3  4  0  0]\n",
+      " [ 0 -1  0  2  0  0]\n",
+      " [ 0  0  1  0  0  0]\n",
+      " [ 0  0  0 -1  0  0]\n",
+      " [ 2  4  5  8  1  0]\n",
+      " [ 2  4  5  8  0  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"A_lambda:\\n{A_lambda}\")"
+   ]
   }
  ],
  "metadata": {
