Re-title notebooks Add simple and optimized use cases to python notebook Fix relational_composition bug (order of operands)

--- a/notebooks/II. Linear Algebra of Red Black Graphs.ipynb
+++ b/notebooks/II. Linear Algebra of Red Black Graphs.ipynb
@@ -180,7 +180,7 @@
     "        A_lambda[i].append(vc_lambda[i][0])\n",
     "        for j in range(N):\n",
     "            if not uc_lambda[0][j] == 0:\n",
-    "                nz_min(avos(uc_lambda[0][j], vc_lambda[i][0]), A_lambda[i][j])\n",
+    "                A_lambda[i][j] = nz_min(avos(vc_lambda[i][0], uc_lambda[0][j]), A_lambda[i][j])\n",
     "    A_lambda[N].append(u[0][N])\n",
     "    return A_lambda\n"
    ]
