Discuss determinants of a red black graph

--- a/notebooks/I. Red Black Graphs.ipynb
+++ b/notebooks/I. Red Black Graphs.ipynb
@@ -82,12 +82,12 @@
     "\n",
     "The example graph above would be represented by the following adjacency matrix.\n",
     "\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "0 & 0 & 1 & 1 \\\\\n",
     "0 & 0 & 1 & 1 \\\\\n",
     "0 & 0 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & 0 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "\n",
     "### Red-Black Graph Adjacency Matrix\n",
     "\n",
@@ -106,12 +106,12 @@
     "\n",
     "With this definition, the example graph above would be represented by the following Red-Black adjacency matrix. \n",
     "\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "1 & 0 & 2 & 3 \\\\\n",
     "0 & -1 & 2 & 3 \\\\\n",
     "0 & 0 & -1 & 0 \\\\\n",
     "0 & 0 & 0 & 1 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "\n",
     "### Observations\n",
     "\n",
@@ -425,37 +425,37 @@
    "metadata": {},
    "source": [
     "\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "-1 & 2 & 3 & 0 & 0 \\\\\n",
     "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "\n",
     "Running this modified Warshall algorithm against this example matrix results in the following $A_{rb}^+$:\n",
     "\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "-1 & 2 & 3 & 4 & 0 \\\\\n",
     "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 4 & 5 & 8 & 1 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "\n",
-    "Examining the row vector of $A_{rb}^+$ corresponding to $vertex_{4}$, $\\begin{vmatrix}2 & 4 & 5 & 8 & 1\\end{vmatrix}$, we observe that application of the modified Warshall algorithm resulted in the full ancestry of $vertex_{4}$, $\\begin{vmatrix}f & pgf & pgm & pgff & b\\end{vmatrix}$. Examining the column vector corresponding to $vertex_{3}$, $\\begin{vmatrix}\n",
+    "Examining the row vector of $A_{rb}^+$ corresponding to $vertex_{4}$, $\\begin{bmatrix}2 & 4 & 5 & 8 & 1\\end{bmatrix}$, we observe that application of the modified Warshall algorithm resulted in the full ancestry of $vertex_{4}$, $\\begin{bmatrix}f & pgf & pgm & pgff & b\\end{bmatrix}$. Examining the column vector corresponding to $vertex_{3}$, $\\begin{bmatrix}\n",
     "4 \\\\\n",
     "2 \\\\\n",
     "0 \\\\\n",
     "-1 \\\\\n",
     "8 \\\\\n",
-    "\\end{vmatrix}$, resulted in the full descendency for that vertex, $\\begin{vmatrix}\n",
+    "\\end{bmatrix}$, resulted in the full descendency for that vertex, $\\begin{bmatrix}\n",
     "pgf \\\\\n",
     "f \\\\\n",
     "0 \\\\\n",
     "r\\\\\n",
     "pgff \\\\\n",
-    "\\end{vmatrix}$. (relationship key: r - self (male), b - self (female), f - father, pgf - paternal grandfather, pgm - paternal grandmother, pgff - pathernal grandfather's father)\n",
+    "\\end{bmatrix}$. (relationship key: r - self (male), b - self (female), f - father, pgf - paternal grandfather, pgm - paternal grandmother, pgff - pathernal grandfather's father)\n",
     "\n",
     "**TODO**: requires a better explanation of how to read out row vectors and column vectors.\n",
     "\n",
