--- a/notebooks/II. Linear Algebra of Red Black Graphs.ipynb
+++ b/notebooks/II. Linear Algebra of Red Black Graphs.ipynb
@@ -25,28 +25,28 @@
     "\n",
     "Consider the Red Black adjacency matrix from our prior example:\n",
     "\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "-1 & 2 & 3 & 0 & 0 \\\\\n",
     "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "\n",
     "Assuming 0 indexing in the tha matrix, the 4th row vector is a simple row vector for $vertex_{4}$ while the 2nd column vector is simple column for $vertex_{2}$. It is trivally observable that that $vertex_{4}$ is related to $vertex_{2}$ (by *pedigree number* 5). \n",
     "\n",
     "\\begin{equation*}\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "\\cdot\n",
-    "\\begin{vmatrix}\n",
+    "\\begin{bmatrix}\n",
     "3 \\\\\n",
     "0 \\\\\n",
     "1 \\\\\n",
     "0 \\\\\n",
     "0 \\\\\n",
-    "\\end{vmatrix}\n",
+    "\\end{bmatrix}\n",
     "= 5\n",
     "\\end{equation*}\n",
     "\n",
@@ -195,7 +195,33 @@
     "\n",
     "A modification to the relational_composition algorithm can prevent the introduction of cycles into a Red Black Graph. Vertices are added to an existing graph via relational composition. The intermedite vectors, $\\vec u'_{\\lambda, c}$ and $\\vec v'_{\\lambda, s}$ represent the complete ancestry and complete descedency for the new vertex $\\lambda$ respectively. The cycle consstraint would be invalidated should there be any vertex that simultaneously appears in the ancestry and descendency for a given vertex.\n",
     "\n",
-    "This is easily validated in the **relational composition** algorithm and can be expressed more formally. Given $\\vec u'$ and $\\vec v'$ of dimension $n$ defined as $u'_{\\lambda, c}$ and $v'_{\\lambda, c}$ above. **Relational composition** is invalid if there exists a dimension $i$ where $i$ != $n$ and $u'_{i}$ != 0 and $v'_{i}$ != 0. The **relational composition** is valid otherwise."
+    "This is easily validated in the **relational composition** algorithm and can be expressed more formally. Given $\\vec u'$ and $\\vec v'$ of dimension $n$ defined as $u'_{\\lambda, c}$ and $v'_{\\lambda, c}$ above. **Relational composition** is undefined if there exists a dimension $i$ where $i$ != $n$ and $u'_{i}$ != 0 and $v'_{i}$ != 0. The **relational composition** is well-formed otherwise.\n",
+    "\n",
+    "## Determinants\n",
+    "\n",
+    "Let's explore the determinants of the class of matrices that represent Red Black Graphs. Staring with the simple case of a $2 x 2$ matrix.\n",
+    "\n",
+    "$\\begin{vmatrix}A\\end{vmatrix} = \\begin{vmatrix}a & b \\\\ c & d \\\\ \\end{vmatrix} = ad - cb$\n",
+    "\n",
+    "As per formal definition, $a$ and $d$ $\\in \\left\\{ {-1, 1}\\right\\}$; $b$ defines the relationship from the vertex represented by the first row to the vertex represented by the second row; $c$ defines the relationship from the vertex represented by the second row to the vertex represented by the first row. \n",
+    "\n",
+    "As per constraints (no cycles) if $b$ is non-zero then $c$ must be zero and conversely if $c$ is non-zero, $b$ must be zero.\n",
+    "\n",
+    "Now the question is presented as to what arithmetic operators should be used in the calculation of $\\begin{vmatrix}A\\end{vmatrix} = ad - cb$. If, as in matrix multiplication, we use the *avos* operator in place of multiplication the the term $ad$ will also be constrained to $\\left\\{ {-1, 1}\\right\\}$. If instead we use multiplication, $ad$ will still be constrained to $\\left\\{ {-1, 1}\\right\\}$. The term $cb$ will always be 0. Whether we use addition/subtraction or non-zero-min to combine the terms $ad$ and $cb$ is immaterial as the $cb$ is 0 and the result will be determined by $ad$. \n",
+    "\n",
+    "It's interesting to also look at the case of a $3 x 3$ matrix.\n",
+    "\n",
+    "$\\begin{vmatrix}A\\end{vmatrix} = \\begin{vmatrix}a & b & c \\\\ d & e & f \\\\ g & h & i \\end{vmatrix} = aei + bfg + cdh - ceg - bdi - afh$\n",
+    "\n",
+    "As in the $2 x 2$ case, the product of the diagonals is constrained to $\\left\\{ {-1, 1}\\right\\}$ and all other terms will be zero as they either represent the cycle of path length 2 or path length 1. Let's label the vertex representing by the first row as $\\alpha$, the second row as $\\beta$ and the third row as $\\gamma$. Let's look at the $bfg$ term. $b$ represents the relationship from $\\alpha$ to $\\beta$, $f$ represents the relationship from $\\beta$ to $\\gamma$ and $g$ represents the relationship from $\\gamma$ to $\\alpha$. This term defines a cycle of path length 2 and at least one of the terms must be zero by constraint. Again, successive application of *avos* or multiplication will result in zero. \n",
+    "\n",
+    "Let's look at the $ceg$ term. $c$ represents the relationship from $\\alpha$ to $\\gamma$, $e$ represents the relationship from $\\beta$ to itself and $g$ represents the relationship from $\\gamma$ to $\\alpha$. Again, by constraint, either $c$ or $g$ must be zero. Therfore $ceg$ will be zero.\n",
+    "\n",
+    "This treatment can be expanded to show that any square sub-matrix of $A$ will have a determinant of $\\left\\{ {-1, 0, 1}\\right\\}$. In fact, the determinant of the square sub-matrix will be $\\left\\{ {-1, 1}\\right\\}$ if the sub-matrix is along the diagonal of $A$ and zero otherwise.\n",
+    "\n",
+    "(I'm weak at formal proofs, but by taking the above reasoning, and applying it to matrix minors and cofactors it can be shown that matrices that represent Red Black graphs are Unimodular.)\n",
+    "\n",
+    "The determinant of a Red Black graph matrix will be $\\left\\{ {-1, 1}\\right\\}$.\n"
    ]
   },
   {
@@ -204,7 +230,6 @@
    "source": [
     "## Areas of Further investigation\n",
     "\n",
-    "* Determinants\n",
     "* Eigenvalues\n",
     "* *avos* properties (commutitivity, associativity, distribution, identity, inverse, etc.)\n",
     "* Spectral Graph Theory\n",
