Scripts to support conversion to latex and pdf Formatting changes to prevent latex errors

--- a/notebooks/I. Red Black Graphs.ipynb
+++ b/notebooks/I. Red Black Graphs.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "hide_input": true
    },
@@ -39,7 +39,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,12 +82,12 @@
     "\n",
     "The example graph above would be represented by the following adjacency matrix.\n",
     "\n",
-    "\\begin{bmatrix}\n",
+    "$$\\begin{bmatrix}\n",
     "0 & 0 & 1 & 1 \\\\\n",
     "0 & 0 & 1 & 1 \\\\\n",
     "0 & 0 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & 0 \\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "### Red-Black Graph Adjacency Matrix\n",
     "\n",
@@ -106,28 +106,22 @@
     "\n",
     "With this definition, the example graph above would be represented by the following Red-Black adjacency matrix. \n",
     "\n",
-    "\\begin{bmatrix}\n",
+    "$$\\begin{bmatrix}\n",
     "1 & 0 & 2 & 3 \\\\\n",
     "0 & -1 & 2 & 3 \\\\\n",
     "0 & 0 & -1 & 0 \\\\\n",
     "0 & 0 & 0 & 1 \\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "### Observations\n",
     "\n",
     "We note the following properties (obviously self-evident):\n",
     "\n",
-    "\\begin{equation*}\n",
-    "trace(A_{rb}) = |V_{black}| - |V_{red}|\n",
-    "\\end{equation*} \n",
+    "$$trace(A_{rb}) = |V_{black}| - |V_{red}|$$\n",
     "\n",
-    "\\begin{equation*}\n",
-    "|V| = |V_{black}| + |V_{red}|\n",
-    "\\end{equation*}\n",
+    "$$|V| = |V_{black}| + |V_{red}|$$\n",
     "\n",
-    "\\begin{equation*}\n",
-    "|V_{black}| = \\frac{|V| + trace(A_{rb})}{2}\n",
-    "\\end{equation*}\n"
+    "$$|V_{black}| = \\frac{|V| + trace(A_{rb})}{2}$$"
    ]
   },
   {
@@ -425,23 +419,23 @@
    "metadata": {},
    "source": [
     "\n",
-    "\\begin{bmatrix}\n",
+    "$$\\begin{bmatrix}\n",
     "-1 & 2 & 3 & 0 & 0 \\\\\n",
     "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "Running this modified Warshall algorithm against this example matrix results in the following $A_{rb}^+$:\n",
     "\n",
-    "\\begin{bmatrix}\n",
+    "$$\\begin{bmatrix}\n",
     "-1 & 2 & 3 & 4 & 0 \\\\\n",
     "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 4 & 5 & 8 & 1 \\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "Examining the row vector of $A_{rb}^+$ corresponding to $vertex_{4}$, $\\begin{bmatrix}2 & 4 & 5 & 8 & 1\\end{bmatrix}$, we observe that application of the modified Warshall algorithm resulted in the full ancestry of $vertex_{4}$, $\\begin{bmatrix}f & pgf & pgm & pgff & b\\end{bmatrix}$. Examining the column vector corresponding to $vertex_{3}$, $\\begin{bmatrix}\n",
     "4 \\\\\n",
