--- a/notebooks/II. Linear Algebra of Red Black Graphs.ipynb
+++ b/notebooks/II. Linear Algebra of Red Black Graphs.ipynb
@@ -25,18 +25,17 @@
     "\n",
     "Consider the Red Black adjacency matrix from our prior example:\n",
     "\n",
-    "\\begin{bmatrix}\n",
+    "$$\\begin{bmatrix}\n",
     "-1 & 2 & 3 & 0 & 0 \\\\\n",
     "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "Assuming 0 indexing in the tha matrix, the 4th row vector is a simple row vector for $vertex_{4}$ while the 2nd column vector is simple column for $vertex_{2}$. It is trivally observable that that $vertex_{4}$ is related to $vertex_{2}$ (by *pedigree number* 5). \n",
     "\n",
-    "\\begin{equation*}\n",
-    "\\begin{bmatrix}\n",
+    "$$\\begin{bmatrix}\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
     "\\end{bmatrix}\n",
     "\\cdot\n",
@@ -47,8 +46,7 @@
     "0 \\\\\n",
     "0 \\\\\n",
     "\\end{bmatrix}\n",
-    "= 5\n",
-    "\\end{equation*}\n",
+    "= 5$$\n",
     "\n",
     "The vector dot product, summing element-wise products, results in a scaler value of 6. Element wise *avos* product does in fact yield *pedigree number* that represents a relationship. However, it is possible for there to be multiple paths through the graph bewteen two nodes. If that were the case, summing the element-wise *avos* product would not result in the *pedigree number* representing the relationship from $vertex_{a}$ to $vertex_{c}$. For the *avos* vector product, rather than summing the element-wise *avos* products we arbitrarily choos the non-zero minimum element-wise product, thus representing the \"closest\" relationship between $vertex_{a}$ and $vertex_{c}$.\n",
     "\n",
@@ -77,14 +75,10 @@
     "### Observations\n",
     "\n",
     "The product of a simple row vector and the transitive closure of a Red Black adjacency matrix is a closed row vector\n",
-    "\\begin{equation*}\n",
-    "\\vec u_{s} A_{rb}^+ = \\vec u_{c}\n",
-    "\\end{equation*}\n",
+    "$$\\vec u_{s} A_{rb}^+ = \\vec u_{c}$$\n",
     "\n",
     "The product of the transitive closure of a Red Black adjacency matrix and a simple column vector is a closed column vector\n",
-    "\\begin{equation*}\n",
-    "A_{rb}^+ \\vec v_{s} = \\vec v_{c}\n",
-    "\\end{equation*}\n"
+    "$$A_{rb}^+ \\vec v_{s} = \\vec v_{c}$$"
    ]
   },
   {
@@ -126,9 +120,7 @@
     "\n",
     "Consider adding a vertex to the graph that is not currently represented and how we might update $A_{rb}^+$ as a result of the vertex addition. In order to introduce a vetex, $\\lambda$, into the graph, that vertex may connect to edges and may also have edges connect to it. This is represented by $\\vec u_{\\lambda, s}$, a row vector that captures direct edges from $\\lambda$ to existing vertices, and $\\vec v_{\\lambda, s}$, a column vector that captures direct edges from existing vertices to $\\lambda$. Note however, that if $A_{rb}^+$ has dimension **N x N**, then $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ have dimension **N + 1**, where the final element for either $\\vec u_{\\lambda, s}$ and $\\vec v_{\\lambda, s}$ will either be -1 or 1 depending on whether the added vertex is red or black. Finally, we'll denote $A_{\\lambda, rb}^+$ as the transitive closure of the Red Black adjacency matrix of $A_{rb}$ with vetex $\\lambda$ added. We'll represent this notationally by:\n",
     "\n",
-    "\\begin{equation*}\n",
-    "A_{\\lambda, rb}^+ = \\vec u_{\\lambda, s} A_{rb}^+ \\vec v_{\\lambda, s}\n",
-    "\\end{equation*}\n",
+    "$$A_{\\lambda, rb}^+ = \\vec u_{\\lambda, s} A_{rb}^+ \\vec v_{\\lambda, s}$$\n",
     "\n",
     "and designate this relationship as the **Relational Composition** of the transitive closure of a Red Black adjacency matrix.\n",
     "\n",
@@ -144,7 +136,7 @@
     "    1. appending $\\vec u'_{\\lambda, c}$ to $A_{rb}^+$ as a new row \n",
     "    2. Add the \"last\" dimension removed in step 1 as the \"last\" dimension of $\\vec u'_{\\lambda, c}$ resulting in $\\vec u_{\\lambda, c}$\n",
     "    3. appending $\\vec v_{\\lambda, c}$ to $A_{rb}^+$ as a new column resulting in $A'_{lamba,rb}$\n",
-    "    4. For each row, $i$, where $\\vec u_{c}[j]$ != 0, set $A'_{lamba,rb}[i,j]$ = $\\vec u_{c}[j]$ *avos* $\\vec v_{c}[i]$\n",
+    "    4. For each row, $i$, where $\\vec u_{c}[j]$ != 0, set $A'_{lamba,rb}[i,j] = \\vec u_{c}[j]$ *avos* $\\vec v_{c}[i]$\n",
     "    \n",
     "A simple implementation of the relational composition follows:"
    ]
@@ -201,7 +193,7 @@
     "\n",
     "Let's explore the determinants of the class of matrices that represent Red Black Graphs. Staring with the simple case of a $2 x 2$ matrix.\n",
     "\n",
-    "$\\begin{vmatrix}A\\end{vmatrix} = \\begin{vmatrix}a & b \\\\ c & d \\\\ \\end{vmatrix} = ad - cb$\n",
+    "$$\\begin{vmatrix}A\\end{vmatrix} = \\begin{vmatrix}a & b \\\\ c & d \\\\ \\end{vmatrix} = ad - cb$$\n",
     "\n",
     "As per formal definition, $a$ and $d$ $\\in \\left\\{ {-1, 1}\\right\\}$; $b$ defines the relationship from the vertex represented by the first row to the vertex represented by the second row; $c$ defines the relationship from the vertex represented by the second row to the vertex represented by the first row. \n",
     "\n",
@@ -211,7 +203,7 @@
     "\n",
     "It's interesting to also look at the case of a $3 x 3$ matrix.\n",
     "\n",
-    "$\\begin{vmatrix}A\\end{vmatrix} = \\begin{vmatrix}a & b & c \\\\ d & e & f \\\\ g & h & i \\end{vmatrix} = aei + bfg + cdh - ceg - bdi - afh$\n",
+    "$$\\begin{vmatrix}A\\end{vmatrix} = \\begin{vmatrix}a & b & c \\\\ d & e & f \\\\ g & h & i \\end{vmatrix} = aei + bfg + cdh - ceg - bdi - afh$$\n",
     "\n",
     "As in the $2 x 2$ case, the product of the diagonals is constrained to $\\left\\{ {-1, 1}\\right\\}$ and all other terms will be zero as they either represent the cycle of path length 2 or path length 1. Let's label the vertex representing by the first row as $\\alpha$, the second row as $\\beta$ and the third row as $\\gamma$. Let's look at the $bfg$ term. $b$ represents the relationship from $\\alpha$ to $\\beta$, $f$ represents the relationship from $\\beta$ to $\\gamma$ and $g$ represents the relationship from $\\gamma$ to $\\alpha$. This term defines a cycle of path length 2 and at least one of the terms must be zero by constraint. Again, successive application of *avos* or multiplication will result in zero. \n",
     "\n",
