Conform code to notebook, i.e. compositional vectors are same size as R+ Clean up some compiler warnings Add Notebook to capture steps in writing Numpy Extension

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -909,7 +909,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.45 ms ± 205 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "9.64 ms ± 427 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -928,7 +928,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "491 µs ± 52 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "532 µs ± 44.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1108,7 +1108,7 @@
    ],
    "source": [
     "#               D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
-    "u = rb.array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]], dtype=np.int32) \n",
+    "u = rb.array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]], dtype=np.int32) \n",
     "v = rb.array([[ 0],  \n",
     "              [ 0],\n",
     "              [ 2],\n",
@@ -1123,14 +1123,14 @@
     "              [ 0],\n",
     "              [ 0],\n",
     "              [ 0],\n",
-    "              [-1]], dtype=np.int32) \n",
+    "             ], dtype=np.int32) \n",
     "\n",
-    "u_lambda = u[:,:-1] @ A1_star\n",
-    "v_lambda = A1_star @ v[:-1,:]\n",
+    "u_lambda = u @ A1_star\n",
+    "v_lambda = A1_star @ v\n",
     "print(f\"u_lambda:\\n{u_lambda}\")\n",
     "print(f\"v_lambda:\\n{v_lambda}\")\n",
     "\n",
-    "A_lambda = A1_star.relational_composition(u, v)\n",
+    "A_lambda = A1_star.relational_composition(u, v, -1)\n",
     "print(f\"A_lambda:\\n{A_lambda}\")"
    ]
   },
@@ -1143,7 +1143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.1 µs ± 664 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "26.1 µs ± 592 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -1161,13 +1161,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41.1 µs ± 2.31 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "37.5 µs ± 1.82 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "A_lambda = A1_star.relational_composition(u, v)"
+    "A_lambda = A1_star.relational_composition(u, v, -1)"
    ]
   },
   {
