--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -581,12 +581,11 @@
    "metadata": {},
    "source": [
     "## Relational Composition\n",
+    "### Adding a Vertex to $R^+$\n",
     "\n",
-    "Consider the case of adding a new vertex to a red black graph. The new vertex, $\\lambda$, may introduce edges to/from vertices in the graph and the corresponding row/column vectors conform to the compositional vector classes defined above. Specifically if adding a red vertex to the graph, the vectors $u^{r}_{\\lambda,s}$ and $v^{r}_{\\lambda,s}$ define the composition, or if adding a black vertex to the graph, the vectors $u^{b}_{\\lambda,s}$ and $v^{b}_{\\lambda,s}$ define the composition. These compositional vectors have non-zero elements only for immediate ancestry/descendency. The operation of adding a new node to a graph is designated the \"relational composition\" and is defined where $R^+$ is a square matrix of dimension $N$ and $R_{\\lambda}^+$ is a square matrix of dimension $N + 1$ and the colors of $\\vec{u^{c}_{\\lambda,s}}$ and $\\vec{v^{c}_{\\lambda,s}}$ must be the same. The notation of the relational composition is:\n",
+    "Consider the case of adding a new vertex to a red black graph. The new vertex, $\\lambda$, may introduce edges to/from vertices in the graph and the corresponding row/column vectors conform to the compositional vector classes defined above. Specifically if adding a red vertex to the graph, the vectors $u^{r}_{\\lambda,s}$ and $v^{r}_{\\lambda,s}$ define the composition, or if adding a black vertex to the graph, the vectors $u^{b}_{\\lambda,s}$ and $v^{b}_{\\lambda,s}$ define the composition. These compositional vectors have non-zero elements only for immediate ancestry/descendency. The operation of adding a new vertex to a graph is designated the \"vertex relational composition\" and is defined where $R^+$ is a square matrix of dimension $N$ and $R_{\\lambda}^+$ is a square matrix of dimension $N + 1$ and the colors of $\\vec{u^{c}_{\\lambda,s}}$ and $\\vec{v^{c}_{\\lambda,s}}$ must be the same. The notation of the vertex relational composition is:\n",
     "\n",
-    "$$R_{\\lambda}^+ = \\vec{u^{c}_{\\lambda,s}} R^+ \\vec{v^{c}_{\\lambda,s}}$$\n",
-    "\n",
-    "\n",
+    "$$R_{\\lambda}^+ = \\vec{u^{c}_{\\lambda,s}}\\text{,}R^+\\text{,}\\vec{v^{c}_{\\lambda,s}}\\text{,}color$$\n",
     "\n",
     "The simple/complete relationship observation above can be applied in this instance. $\\vec{u^{c}_{\\lambda,s}} = \\vec{u^{c}_{\\lambda,c}}$ and $R^+ \\lor \\vec{v^{c}_{\\lambda,s}} = \\vec{v^{c}_{\\lambda,c}}$. $\\vec{u^{c}_{\\lambda,c}}$ and $\\vec{v^{c}_{\\lambda,c}}$ are the row and column, respectively, that need to be appended to $R^+$ (along with the final diagonal element corresponding to $\\lambda$'s color) to compose $R_{\\lambda}^+$. Appending the complete compositional vectors to $R^+$ isn't sufficient to compose $R_{\\lambda}^+$. The \"body\" of $R^+$ needs to be \"updated\" to ensure that $R_{\\lambda}^+$ is also transitively closed. For each row in $R^+$, every element in that row is set to the avos product of the corresponding column elemen in $\\vec{v^{c}_{\\lambda,c}}$ and the corresponding row element in $\\vec{u^{c}_{\\lambda,c}}$.\n",
     "\n",
@@ -600,12 +599,69 @@
     "    3. setting the diagnoal element ${R_{\\lambda}^+}_{N+1, N+1}$ to either 1 or -1 depending on the color of the composition.\n",
     "    4. For each row, $i$, and each column, $j$, where $\\vec{u^{c}_{\\lambda,c}}_{j} != 0$, set ${R_{\\lambda}^{+}}_{i,j} = \\vec{u^{c}_{\\lambda,s}}_{j} \\lor \\vec{v^{c}_{\\lambda,c}}_{i}$\n",
     "    \n",
-    "A simple implementation of the relational composition follows:"
+    "### Adding an Edge to $R^+$\n",
+    "Consider the case of adding a new edge to a red black graph. The operation of adding a new edge to a graph is designated the \"edge relational composition\". The new edge is added between two existing vertices, $vertex_\\alpha$ and $vertex_\\beta$. The notation of the edge relational composition is:\n",
+    "\n",
+    "$$R^+_\\lambda = R^+,\\alpha,\\beta,n_p^{\\alpha \\rightarrow \\beta}$$\n",
+    "\n",
+    "For this example we'll use the previous example, $R$, with the edge from node 0 to node 1 removed resulting in:\n",
+    "\n",
+    "$$R = \\begin{bmatrix}\n",
+    "-1 & 0 & 3 & 0 & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
+    "2 & 0 & 0 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\\text{, }R^+ = \\begin{bmatrix}\n",
+    "-1 & 0 & 3 & 0 & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
+    "2 & 0 & 5 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "To add an edge from $vertex_{\\alpha}$ to $vertex_{\\beta}$, take the row vector corresponding to $vertex_{\\alpha}$ and the column vector corresponding to $vertex_{\\beta}$ from $R^+$, $\\vec{u_{\\alpha}}$ and $\\vec{v_{\\beta}}$ respectively. Set element $\\beta$ of $\\vec{u_{\\alpha}}$ and element $\\alpha$ of $\\vec{v_\\beta}$ to $n_p^{\\alpha \\rightarrow \\beta}$ yielding $\\vec{u_\\alpha}^{'}$ and $\\vec{v_\\beta}^{'}$ **\\[1\\]** . For our example, $n_p^{0 \\rightarrow 1} = 2$ and: \n",
+    "\n",
+    "$$\\vec{u_0} = \\begin{bmatrix}-1 & 0 & 3 & 0 & 0\\end{bmatrix}\\text{, }\n",
+    "\\vec{u_0}^{'} = \\begin{bmatrix}-1 & {\\bf 2} & 3 & 0 & 0\\end{bmatrix}$$\n",
+    "\n",
+    "$$\\vec{v_1} = \\begin{bmatrix}0 \\\\ -1 \\\\ 0 \\\\ 0 \\\\ 0\\end{bmatrix}\\text{, }\n",
+    "\\vec{v_1}^{'} = \\begin{bmatrix}{\\bf 2} \\\\ -1 \\\\ 0 \\\\ 0 \\\\ 0\\end{bmatrix}$$\n",
+    "\n",
+    "Now, generate replacement vectors for the row and column vectors selected as:\n",
+    "\n",
+    "$$\\vec{u_\\alpha}^{''} = \\vec{u_\\alpha^{'}}\\lor R^+ \\text{ and, }\\vec{v_\\beta}^{''} = R^+\\lor\\vec{v_\\beta^{'}}{\\bf [2]}$$\n",
+    "\n",
+    "For our example:\n",
+    "$$\\vec{u_0}^{''}=\\vec{u_0^{'}}\\lor R^+=\\begin{bmatrix}-1 & 2 & 3 & 4 & 0\\end{bmatrix}\\text{ and, }\n",
+    "\\vec{v_1}^{''}=R^+\\lor\\vec{v_1^{'}}=\\begin{bmatrix}2 \\\\ -1 \\\\ 0 \\\\ 0 \\\\ 4\\end{bmatrix}$$\n",
+    "\n",
+    "Replace the row and column in $R^+$ with $\\vec{u_\\alpha}^{''}$ and $\\vec{v_\\beta}^{''}$, yielding $R^{'}$ **\\[3\\]** . \n",
+    "\n",
+    "$$R^{'} = \\begin{bmatrix}\n",
+    "-1 & {\\bf 2} & 3 & {\\bf 4} & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
+    "2 & {\\bf 4} & 5 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "Finally, to generate $R^+_\\lambda$, for each row, $i$, and each column, $j$, where $\\vec{u_\\alpha}_{j} == 0$ and $\\vec{u_\\alpha^{''}}_{j} != 0$, set ${R^+_\\lambda}_{i,j} = \\vec{u^{''}_\\alpha}_{j} \\lor \\vec{v^{''}_\\beta}_{i}$ **\\[4\\]** .\n",
+    "\n",
+    "$$R^{''+} = \\begin{bmatrix}\n",
+    "-1 & {\\bf 2} & 3 & {\\bf 4} & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
+    "2 & {\\bf 4} & 5 & {\\bf 8} & 1 \\\\\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "### Simple Implementations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +671,7 @@
     "import copy\n",
     "\n",
     "\n",
-    "def relational_composition(u, R, v, color):\n",
+    "def vertex_relational_composition(u, R, v, color):\n",
     "    '''\n",
     "    Given simple row vector u, transitively closed matrix R, and simple column vector v where\n",
     "    u and v represent a vertex, lambda, not currently represented in R, compose R_{\\lambda}\n",
@@ -634,9 +690,32 @@
     "    for i in range(N):\n",
     "        R_lambda[i].append(vc_lambda[i][0])\n",
     "        for j in range(N):\n",
-    "            if not uc_lambda[0][j] == 0:\n",
+    "            if uc_lambda[0][j] != 0:\n",
     "                R_lambda[i][j] = nz_min(avos(vc_lambda[i][0], uc_lambda[0][j]), R_lambda[i][j])\n",
     "    R_lambda[N].append(color)\n",
+    "    return R_lambda\n",
+    "\n",
+    "def edge_relational_composition(R, alpha, beta, relationship):\n",
+    "    '''\n",
+    "    Given a transitively closed graph, two vertices in that graph, alpha and beta, and the\n",
+    "    relationship from alpha to beta, compose R'', which is the transitive closure with the\n",
+    "    new edge included\n",
+    "    :param R:\n",
+    "    :param alpha: a vertex in the graph (row index)\n",
+    "    :param beta: a vertex in the grpah (column index)\n",
+    "    :param relationship: the relationship (beta's pedigree number in alpha's pedigree)\n",
+    "    :return: transitive closure of the grpah, R, with new edge\n",
+    "    '''\n",
+    "    N = len(R)\n",
+    "    u_lambda = [R[alpha]]\n",
+    "    u_lambda[0][beta] = relationship\n",
+    "    u_lambda = mat_avos(u_lambda, R)\n",
+    "    R_lambda = copy.deepcopy(R)\n",
+    "    R_lambda[alpha] = u_lambda[0]\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            if R_lambda[alpha][j] != 0:\n",
+    "                R_lambda[i][j] = nz_min(avos(R_lambda[i][alpha], R_lambda[alpha][j]), R_lambda[i][j])\n",
     "    return R_lambda\n"
    ]
   },
