Update edge relational composition section to be more concise and add notation for "replace element i of x".

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -587,7 +587,7 @@
     "\n",
     "$$R_{\\lambda}^+ = \\vec{u^{c}_{\\lambda,s}}\\text{,}R^+\\text{,}\\vec{v^{c}_{\\lambda,s}}\\text{,}color$$\n",
     "\n",
-    "The simple/complete relationship observation above can be applied in this instance. $\\vec{u^{c}_{\\lambda,s}} = \\vec{u^{c}_{\\lambda,c}}$ and $R^+ \\lor \\vec{v^{c}_{\\lambda,s}} = \\vec{v^{c}_{\\lambda,c}}$. $\\vec{u^{c}_{\\lambda,c}}$ and $\\vec{v^{c}_{\\lambda,c}}$ are the row and column, respectively, that need to be appended to $R^+$ (along with the final diagonal element corresponding to $\\lambda$'s color) to compose $R_{\\lambda}^+$. Appending the complete compositional vectors to $R^+$ isn't sufficient to compose $R_{\\lambda}^+$. The \"body\" of $R^+$ needs to be \"updated\" to ensure that $R_{\\lambda}^+$ is also transitively closed. For each row in $R^+$, every element in that row is set to the avos product of the corresponding column elemen in $\\vec{v^{c}_{\\lambda,c}}$ and the corresponding row element in $\\vec{u^{c}_{\\lambda,c}}$.\n",
+    "The simple/complete relationship observation above can be applied in this instance. $\\vec{u^{c}_{\\lambda,s}} = \\vec{u^{c}_{\\lambda,c}}$ and $R^+ \\lor \\vec{v^{c}_{\\lambda,s}} = \\vec{v^{c}_{\\lambda,c}}$. $\\vec{u^{c}_{\\lambda,c}}$ and $\\vec{v^{c}_{\\lambda,c}}$ are the row and column, respectively, that need to be appended to $R^+$ (along with the final diagonal element corresponding to $\\lambda$'s color) to compose $R_{\\lambda}^+$. Appending the complete compositional vectors to $R^+$ isn't sufficient to compose $R_{\\lambda}^+$. The \"body\" of $R^+$ needs to be \"updated\" to ensure that $R_{\\lambda}^+$ is also transitively closed. For each row in $R^+$, every element in that row is set to the avos product of the corresponding column element in $\\vec{v^{c}_{\\lambda,c}}$ and the corresponding row element in $\\vec{u^{c}_{\\lambda,c}}$.\n",
     "\n",
     "Expressing this algorithmically:\n",
     "\n",
@@ -597,64 +597,22 @@
     "    1. appending $u^{c}_{\\lambda,c}$ to $R^+$ as a new row \n",
     "    2. appending $v^{c}_{\\lambda,c}$ to $R^+$ as a new column\n",
     "    3. setting the diagnoal element ${R_{\\lambda}^+}_{N+1, N+1}$ to either 1 or -1 depending on the color of the composition.\n",
-    "    4. For each row, $i$, and each column, $j$, where $\\vec{u^{c}_{\\lambda,c}}_{j} != 0$, set ${R_{\\lambda}^{+}}_{i,j} = \\vec{u^{c}_{\\lambda,s}}_{j} \\lor \\vec{v^{c}_{\\lambda,c}}_{i}$\n",
+    "    4. For each row, $i$, and each column, $j$, where $\\vec{u^{c}_{\\lambda,c}}_{j} \\neq 0$, set ${R_{\\lambda}^{+}}_{i,j} = \\vec{u^{c}_{\\lambda,s}}_{j} \\lor \\vec{v^{c}_{\\lambda,c}}_{i}$\n",
     "    \n",
     "### Adding an Edge to $R^+$\n",
     "Consider the case of adding a new edge to a red black graph. The operation of adding a new edge to a graph is designated the \"edge relational composition\". The new edge is added between two existing vertices, $vertex_\\alpha$ and $vertex_\\beta$. The notation of the edge relational composition is:\n",
     "\n",
     "$$R^+_\\lambda = R^+,\\alpha,\\beta,n_p^{\\alpha \\rightarrow \\beta}$$\n",
     "\n",
-    "For this example we'll use the previous example, $R$, with the edge from node 0 to node 1 removed resulting in:\n",
+    "As in the vertex relational composition, we'll make use of the simple/complete relational observation. In this case, the row representing $vertex_\\alpha$ is replaced with the avos product of itself (with $element_beta$ replaced with $n_p^{\\alpha \\rightarrow \\beta}$) and $R^+$. Notationally: $R^{+'} = R^+ +_\\alpha ((vertex_\\alpha +_\\beta n_p^{\\alpha \\rightarrow \\beta}) \\lor R^+)$ where $+_i$ designates replacement of element $i$ in the LHS with the value of the RHS. As in the vertex relational composition, replacing row vector $\\alpha$ with it's complete form isn't sufficient to compose $R_{\\lambda}^+$. The remainder of the row vectors need to be closed with the new relationship. For each row, $i$, in $R^{+'}$ excluding $\\alpha$, every element, $j$ in that row is set to $R^{+'}_{i,\\alpha} \\lor R^{+'}_{\\alpha,j}$.\n",
     "\n",
-    "$$R = \\begin{bmatrix}\n",
-    "-1 & 0 & 3 & 0 & 0 \\\\\n",
-    "0 & -1 & 0 & 2 & 0 \\\\\n",
-    "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & -1 & 0 \\\\\n",
-    "2 & 0 & 0 & 0 & 1 \\\\\n",
-    "\\end{bmatrix}\\text{, }R^+ = \\begin{bmatrix}\n",
-    "-1 & 0 & 3 & 0 & 0 \\\\\n",
-    "0 & -1 & 0 & 2 & 0 \\\\\n",
-    "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & -1 & 0 \\\\\n",
-    "2 & 0 & 5 & 0 & 1 \\\\\n",
-    "\\end{bmatrix}$$\n",
+    "Expressing this algorithmically:\n",
     "\n",
-    "To add an edge from $vertex_{\\alpha}$ to $vertex_{\\beta}$, take the row vector corresponding to $vertex_{\\alpha}$ and the column vector corresponding to $vertex_{\\beta}$ from $R^+$, $\\vec{u_{\\alpha}}$ and $\\vec{v_{\\beta}}$ respectively. Set element $\\beta$ of $\\vec{u_{\\alpha}}$ and element $\\alpha$ of $\\vec{v_\\beta}$ to $n_p^{\\alpha \\rightarrow \\beta}$ yielding $\\vec{u_\\alpha}^{'}$ and $\\vec{v_\\beta}^{'}$ **\\[1\\]** . For our example, $n_p^{0 \\rightarrow 1} = 2$ and: \n",
-    "\n",
-    "$$\\vec{u_0} = \\begin{bmatrix}-1 & 0 & 3 & 0 & 0\\end{bmatrix}\\text{, }\n",
-    "\\vec{u_0}^{'} = \\begin{bmatrix}-1 & {\\bf 2} & 3 & 0 & 0\\end{bmatrix}$$\n",
-    "\n",
-    "$$\\vec{v_1} = \\begin{bmatrix}0 \\\\ -1 \\\\ 0 \\\\ 0 \\\\ 0\\end{bmatrix}\\text{, }\n",
-    "\\vec{v_1}^{'} = \\begin{bmatrix}{\\bf 2} \\\\ -1 \\\\ 0 \\\\ 0 \\\\ 0\\end{bmatrix}$$\n",
-    "\n",
-    "Now, generate replacement vectors for the row and column vectors selected as:\n",
-    "\n",
-    "$$\\vec{u_\\alpha}^{''} = \\vec{u_\\alpha^{'}}\\lor R^+ \\text{ and, }\\vec{v_\\beta}^{''} = R^+\\lor\\vec{v_\\beta^{'}}{\\bf [2]}$$\n",
-    "\n",
-    "For our example:\n",
-    "$$\\vec{u_0}^{''}=\\vec{u_0^{'}}\\lor R^+=\\begin{bmatrix}-1 & 2 & 3 & 4 & 0\\end{bmatrix}\\text{ and, }\n",
-    "\\vec{v_1}^{''}=R^+\\lor\\vec{v_1^{'}}=\\begin{bmatrix}2 \\\\ -1 \\\\ 0 \\\\ 0 \\\\ 4\\end{bmatrix}$$\n",
-    "\n",
-    "Replace the row and column in $R^+$ with $\\vec{u_\\alpha}^{''}$ and $\\vec{v_\\beta}^{''}$, yielding $R^{'}$ **\\[3\\]** . \n",
-    "\n",
-    "$$R^{'} = \\begin{bmatrix}\n",
-    "-1 & {\\bf 2} & 3 & {\\bf 4} & 0 \\\\\n",
-    "0 & -1 & 0 & 2 & 0 \\\\\n",
-    "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & -1 & 0 \\\\\n",
-    "2 & {\\bf 4} & 5 & 0 & 1 \\\\\n",
-    "\\end{bmatrix}$$\n",
-    "\n",
-    "Finally, to generate $R^+_\\lambda$, for each row, $i$, and each column, $j$, where $\\vec{u_\\alpha}_{j} == 0$ and $\\vec{u_\\alpha^{''}}_{j} != 0$, set ${R^+_\\lambda}_{i,j} = \\vec{u^{''}_\\alpha}_{j} \\lor \\vec{v^{''}_\\beta}_{i}$ **\\[4\\]** .\n",
-    "\n",
-    "$$R^{''+} = \\begin{bmatrix}\n",
-    "-1 & {\\bf 2} & 3 & {\\bf 4} & 0 \\\\\n",
-    "0 & -1 & 0 & 2 & 0 \\\\\n",
-    "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & -1 & 0 \\\\\n",
-    "2 & {\\bf 4} & 5 & {\\bf 8} & 1 \\\\\n",
-    "\\end{bmatrix}$$\n",
+    "1. generate $\\vec{u^{'}_\\alpha} = \\vec{u_\\alpha} +_{\\beta} n_p^{\\alpha \\rightarrow \\beta}$, where $\\vec{u_\\alpha}$ is row $\\alpha$ in $R^+$\n",
+    "2. generate $\\vec{u^{c'}_\\alpha} = \\vec{u^{'}_\\alpha} \\lor R^+$\n",
+    "2. Compose $R_{\\lambda}^+$ by:\n",
+    "    1. replacing row $\\alpha$ in $R^+$: $R^{+'} = R^+ +_{\\beta} \\vec{u^{c'}_a\\alpha}$ \n",
+    "    2. For each row, $i$, and each column, $j$, where $i \\neq \\alpha$, set ${R_{\\lambda}^{+}}_{i,j} = R^{+'}_{i,\\alpha} \\lor R^{+'}_{\\alpha,j}$\n",
     "\n",
     "### Simple Implementations"
    ]
