Fix test case Add a more complicated edge_relational_composition test case

--- a/notebooks/Todo List.ipynb
+++ b/notebooks/Todo List.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "# Things to consider / work on\n",
     "\n",
-    "* sparse implementation\n",
-    "* illustrative examples"
+    "## Sparse implementation\n",
+    "## Illustrative examples\n",
+    "\n"
    ]
   },
   {
